2011-10-18  Sam Weinig  <sam@webkit.org>

        Move spellCheckerDocumentTag and handleCorrectionPanelResult from WKViewPrivate to WKViewInternal
        https://bugs.webkit.org/show_bug.cgi?id=70377

        Reviewed by Anders Carlsson.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView spellCheckerDocumentTag]):
        (-[WKView handleCorrectionPanelResult:]):
        Move definition of methods to (Internal) area.

        * UIProcess/API/mac/WKViewInternal.h:
        Add methods.

        * UIProcess/API/mac/WKViewPrivate.h:
        Remove methods.

        * UIProcess/cf/WebBackForwardListCF.cpp:
        Add missing newline.

        * UIProcess/mac/CorrectionPanel.mm:
        Change #include to WKViewInternal.h

        * WebKit2.xcodeproj/project.pbxproj:
        Sort some files.

2011-10-18  Sam Weinig  <sam@webkit.org>

        Move WKView helper files into a sub-group
        https://bugs.webkit.org/show_bug.cgi?id=70375

        Reviewed by Darin Adler.

        * WebKit2.xcodeproj/project.pbxproj:
        Move some files around.

2011-10-18  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97788.
        http://trac.webkit.org/changeset/97788
        https://bugs.webkit.org/show_bug.cgi?id=70366

        broke compile (Requested by inferno-sec on #webkit).

        * UIProcess/API/mac/WKView.mm:
        * UIProcess/API/mac/WKViewPrivate.h:

2011-10-18  Damian Kaleta  <dkaleta@apple.com>

        Add WebKit API to hide the definition window
        https://bugs.webkit.org/show_bug.cgi?id=70345

        Reviewed by Anders Carlsson.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView hideWordDefinitionWindow]): Hides the definition window.
        * UIProcess/API/mac/WKViewPrivate.h:

2011-10-18  Adam Barth  <abarth@webkit.org>

        Always enable ENABLE(XPATH)
        https://bugs.webkit.org/show_bug.cgi?id=70217

        Reviewed by Eric Seidel.

        * Configurations/FeatureDefines.xcconfig:
